--- a/src/Bootstrapper/Api/appsettings.json
+++ b/src/Bootstrapper/Api/appsettings.json
@@ -8,6 +8,16 @@
     "UserName": "guest",
     "Password": "guest"
   },
+  "Keycloak": {
+    "realm": "myrealm",
+    "auth-server-url": "http://localhost:9090/",
+    "ssl-required": "none",
+    "verify-token-audience": false,
+    "credentials": {
+      "secret": ""
+    },
+    "confidential-port": 0
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
     "MinimumLevel": {
