--- a/src/Ordering/Ordering/Ordering.csproj
+++ b/src/Ordering/Ordering/Ordering.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Orders\Features\" />
+    </ItemGroup>
+
 </Project>
